--- a/kontakt.html
+++ b/kontakt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="https://use.typekit.net/lpp0zam.css">
     <link href="assets/css/styles.css" rel="stylesheet">
     <script src="assets/js/script.js" defer></script>
-    <title>Forside</title>
+    <title>Kontakt</title>
 </head>
 
 <body>
     <header></header>
-    <main>Forside</main>
+    <main>Kontakt</main>
     <footer></footer>
 </body>
 
