--- a/index.html
+++ b/index.html
@@ -20,10 +20,17 @@
             <source src="/assets/media/media.mp4" type="video/mp4">
         </video>
         <section class="text">
-            <h1>SPARTA</h1>
-            <h1>BILER</h1>
+            <h1>SPARTA BILER</h1>
             <p>Vi tilbyder køb & salg af biler til privat og erhverv samt leasing af alle bilmærker.</p>
-            <button>Biler på lager</button>
+            <a href="biler.html">
+                <button>Biler på lager</button>
+            </a>
+        </section>
+        <section class="icons">
+            <i class="fas fa-phone-square-alt"></i>
+            <i class="far fa-paper-plane"></i>
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-instagram-square"></i>
         </section>
     </main>
     <footer></footer>
