--- a/index.html
+++ b/index.html
@@ -27,13 +27,20 @@
             </a>
         </section>
         <section class="icons">
-            <i class="fas fa-phone-square-alt"></i>
-            <i class="far fa-paper-plane"></i>
-            <i class="fab fa-facebook-square"></i>
-            <i class="fab fa-instagram-square"></i>
+            <a href="tel:61464685">
+                <i class="fas fa-phone-square-alt"></i> <!-- fontawesome: https://fontawesome.com/v5.15/icons/phone-square-alt?style=solid -->
+            </a> 
+            <a href="mailto:info@spartabiler.dk">
+                <i class="far fa-paper-plane"></i>
+            </a>
+            <a href="https://www.facebook.com/Spartabiler.dk" target="_blank">
+                <img src="/assets/images/facebook.png" alt="Sparta Biler Facebook"> <!-- flaticon: https://www.flaticon.com/premium-icon/facebook_2504903 -->
+            </a>
+            <a href="https://www.instagram.com/spartabiler/" target="_blank">
+                <img src="/assets/images/instagram.png" alt="Sparta Biler Instagram"> <!-- flaticon: https://www.flaticon.com/free-icon/instagram_2111463 -->
+            </a>
         </section>
     </main>
-    <footer></footer>
 </body>
 
 </html>
