animation not done

--- a/biler.html
+++ b/biler.html
@@ -13,8 +13,10 @@
     <title>Title</title>
 </head>
 
-<body>
-    <header></header>
+<body class="cars">
+    <section class="background">
+        <header></header>
+    </section>
     <main>Biler på lager</main>
     <footer></footer>
 </body>
