--- a/leasing.html
+++ b/leasing.html
@@ -13,8 +13,10 @@
     <title>Leasing</title>
 </head>
 
-<body>
-    <header></header>
+<body class="leasing">
+    <section class="background">
+        <header></header>
+    </section>
     <main>
         <h1>leasing</h1>
         
