car page needs slideshow for images

--- a/bil.html
+++ b/bil.html
@@ -12,11 +12,94 @@
     <script src="assets/js/script.js" defer></script>
     <title>Bil</title>
 </head>
-
-<body>
-    <header></header>
-    <main>Bil</main>
+<body class="car">
+    <section class="background">
+        <header></header>
+    </section>
+    <main>
+        <section class="title">
+            <h1 class="bold">JEEP COMPAS</h1>
+        </section>
+        <a href="biler.html">< Tilbage til biler på lager</a>
+        <section class="grid">
+            <img src="assets/images/Andrew-Garfield-Variety-Cover-Story-2-16x9-1.jpeg" alt="">
+            <article>
+                <h4>Månedlig ydelse</h4>
+                <h2 class="bold"><span class="robotobold">4.500</span> DKK pr. md.</h2>
+                <h5>Andre detaljer</h5>
+                <article class="details">
+                    <section>
+                        <p>Ansvars- og kaskoforsikring</p>
+                        <p>Inkluderet</p>
+                    </section>
+                    <hr>
+                    <section>
+                        <p>Service</p>
+                        <p>Inkluderet</p>
+                    </section>
+                    <hr>
+                    <section>
+                        <p>Metallak</p>
+                        <p>Inkluderet</p>
+                    </section>
+                    <hr>
+                    <section>
+                        <p>Afleveringsforsikring</p>
+                        <p>Inkluderet</p>
+                    </section>
+                    <hr>
+                    <section>
+                        <p>Udbetaling</p>
+                        <p><span class="robotolight">5000</span> DKK</p>
+                    </section>
+                    <hr>
+                    <section>
+                        <p>Tilbageleveringsgebyr</p>
+                        <p><span class="robotolight">600</span> DKK</p>
+                    </section>
+                    <hr>
+                    <section>
+                        <p>Halvårlig grøn ejerafgift</p>
+                        <p><span class="robotolight">300</span> DKK</p>
+                    </section>
+                    <a href="kontakt.html">
+                        <button class="bold">
+                            Kontakt os, og modtag et uforpligtende tilbud
+                        </button>
+                    </a>
+                </article>
+            </article>
+            <article>
+                <p>Vi har fundet denne vildt flotte Jeep compas hos vores samarbejdspartner i Tyskland. Bilen er proppet med udstyr lige fra M pakke udenvendigt til Harman Kardon anlæg og Head-Up display indevendigt. BMW's nyeste opdateret Række 6 diesel med 320 hk, der accelererer bilen fra 0-100 på 5.2 sek!</p>
+                <p>Denne bil kan leases i 12, 24 eller 36 måneder, den kan erhvervsleases, splitleases eller sæsonleases, kontakt os for en skræddersyet løsning der passer til dine behov.</p>
+                <p>mere info</p>
+                <p>mere info</p>
+                <p>mere info</p>
+            </article>
+            <article class="extras">
+                <h2>Udstyr</h2>
+                <ul>
+                    <li>Parkeringsensor for og bag</li>
+                    <li>360 grader bakkamera</li>
+                    <li>Adaptive LED laser lygter</li>
+                    <li>4-zone Klima</li>
+                    <li>Regnsensor</li>
+                    <li>Harman Kardon anlæg</li>
+                    <li>Head-Up display</li>
+                    <li>Adaptiv fartpilot</li>
+                    <li>Adaptiv luftundervogn Softclose</li>
+                    <li>Elektrisk bagklap</li>
+                    <li>Fuld elektriske lædersæder m. Massage</li>
+                    <li>Wifi - Internet hotspot</li>
+                </ul>
+            </article>
+            <article class="grey">
+                <p>Ved kreditvurdering skal der fremvises 3 seneste lønsedler, årsopgørelse og kopi af kørekort samt sygesikring.</p>
+                <p>En forudsætning for etablering af leasingaftalen er en positiv kreditvurdering.</p>
+                <p>Tilbuddene er estimater, og det endelige tilbud kan først afgives, når man som kunde er blevet godkendt.</p>
+            </article>
+        </section>
+    </main>
     <footer></footer>
 </body>
-
 </html>
