--- a/biler.html
+++ b/biler.html
@@ -10,14 +10,269 @@
     <link rel="stylesheet" href="https://use.typekit.net/lpp0zam.css">
     <link href="assets/css/styles.css" rel="stylesheet">
     <script src="assets/js/script.js" defer></script>
-    <title>Title</title>
+    <title>Biler på lager</title>
 </head>
 
 <body class="cars">
     <section class="background">
         <header></header>
     </section>
-    <main>Biler på lager</main>
+
+    <main>
+        <div class="container">
+			<div class="boxCars item-1">
+                <table>
+                    <tr>
+                        <th class="headerCars">AUDI MODEL</th>
+                        <th class="right pris" >4.500 pr. md.</th>
+                    </tr>
+                    <tr>
+                        <td>Årstal</td>
+                        <td class="right"><span class="roboto">2013</span></td>
+                    </tr>
+                    <tr>
+                        <td>KM kørt</td>
+                        <td class="right"><span class="roboto">45</span> KM</td>
+                    </tr>
+                    <tr>
+                        <td>Brændstof</td>
+                        <td class="right">Benzin</td>
+                    </tr>
+                </table>
+			</div>
+
+            <div class="boxCars item-2">
+                <table>
+                    <tr>
+                        <th class="headerCars">AUDI MODEL</th>
+                        <th class="right pris" >4.500 pr. md.</th>
+                    </tr>
+                    <tr>
+                        <td>Årstal</td>
+                        <td class="right"><span class="roboto">2013</span></td>
+                    </tr>
+                    <tr>
+                        <td>KM kørt</td>
+                        <td class="right"><span class="roboto">45</span> KM</td>
+                    </tr>
+                    <tr>
+                        <td>Brændstof</td>
+                        <td class="right">Benzin</td>
+                    </tr>
+                </table>
+			</div>
+
+            <div class="boxCars item-3">
+                <table>
+                    <tr>
+                        <th class="headerCars">AUDI MODEL</th>
+                        <th class="right pris" >4.500 pr. md.</th>
+                    </tr>
+                    <tr>
+                        <td>Årstal</td>
+                        <td class="right"><span class="roboto">2013</span></td>
+                    </tr>
+                    <tr>
+                        <td>KM kørt</td>
+                        <td class="right"><span class="roboto">45</span> KM</td>
+                    </tr>
+                    <tr>
+                        <td>Brændstof</td>
+                        <td class="right">Benzin</td>
+                    </tr>
+                </table>
+			</div>
+
+            <div class="boxCars item-4">
+                <table>
+                    <tr>
+                        <th class="headerCars">AUDI MODEL</th>
+                        <th class="right pris" >4.500 pr. md.</th>
+                    </tr>
+                    <tr>
+                        <td>Årstal</td>
+                        <td class="right"><span class="roboto">2013</span></td>
+                    </tr>
+                    <tr>
+                        <td>KM kørt</td>
+                        <td class="right"><span class="roboto">45</span> KM</td>
+                    </tr>
+                    <tr>
+                        <td>Brændstof</td>
+                        <td class="right">Benzin</td>
+                    </tr>
+                </table>
+			</div>
+
+            <div class="boxCars item-5">
+                <table>
+                    <tr>
+                        <th class="headerCars">AUDI MODEL</th>
+                        <th class="right pris" >4.500 pr. md.</th>
+                    </tr>
+                    <tr>
+                        <td>Årstal</td>
+                        <td class="right"><span class="roboto">2013</span></td>
+                    </tr>
+                    <tr>
+                        <td>KM kørt</td>
+                        <td class="right"><span class="roboto">45</span> KM</td>
+                    </tr>
+                    <tr>
+                        <td>Brændstof</td>
+                        <td class="right">Benzin</td>
+                    </tr>
+                </table>
+			</div>
+
+            <div class="boxCars item-6">
+                <table>
+                    <tr>
+                        <th class="headerCars">AUDI MODEL</th>
+                        <th class="right pris" >4.500 pr. md.</th>
+                    </tr>
+                    <tr>
+                        <td>Årstal</td>
+                        <td class="right"><span class="roboto">2013</span></td>
+                    </tr>
+                    <tr>
+                        <td>KM kørt</td>
+                        <td class="right"><span class="roboto">45</span> KM</td>
+                    </tr>
+                    <tr>
+                        <td>Brændstof</td>
+                        <td class="right">Benzin</td>
+                    </tr>
+                </table>
+			</div>
+
+            <div class="boxCars item-7">
+                <table>
+                    <tr>
+                        <th class="headerCars">AUDI MODEL</th>
+                        <th class="right pris" >4.500 pr. md.</th>
+                    </tr>
+                    <tr>
+                        <td>Årstal</td>
+                        <td class="right"><span class="roboto">2013</span></td>
+                    </tr>
+                    <tr>
+                        <td>KM kørt</td>
+                        <td class="right"><span class="roboto">45</span> KM</td>
+                    </tr>
+                    <tr>
+                        <td>Brændstof</td>
+                        <td class="right">Benzin</td>
+                    </tr>
+                </table>
+			</div>
+
+            <div class="boxCars item-8">
+                <table>
+                    <tr>
+                        <th class="headerCars">AUDI MODEL</th>
+                        <th class="right pris" >4.500 pr. md.</th>
+                    </tr>
+                    <tr>
+                        <td>Årstal</td>
+                        <td class="right"><span class="roboto">2013</span></td>
+                    </tr>
+                    <tr>
+                        <td>KM kørt</td>
+                        <td class="right"><span class="roboto">45</span> KM</td>
+                    </tr>
+                    <tr>
+                        <td>Brændstof</td>
+                        <td class="right">Benzin</td>
+                    </tr>
+                </table>
+			</div>
+
+            <div class="boxCars item-9">
+                <table>
+                    <tr>
+                        <th class="headerCars">AUDI MODEL</th>
+                        <th class="right pris" >4.500 pr. md.</th>
+                    </tr>
+                    <tr>
+                        <td>Årstal</td>
+                        <td class="right"><span class="roboto">2013</span></td>
+                    </tr>
+                    <tr>
+                        <td>KM kørt</td>
+                        <td class="right"><span class="roboto">45</span> KM</td>
+                    </tr>
+                    <tr>
+                        <td>Brændstof</td>
+                        <td class="right">Benzin</td>
+                    </tr>
+                </table>
+			</div>
+
+            <div class="boxCars item-10">
+                <table>
+                    <tr>
+                        <th class="headerCars">AUDI MODEL</th>
+                        <th class="right pris" >4.500 pr. md.</th>
+                    </tr>
+                    <tr>
+                        <td>Årstal</td>
+                        <td class="right"><span class="roboto">2013</span></td>
+                    </tr>
+                    <tr>
+                        <td>KM kørt</td>
+                        <td class="right"><span class="roboto">45</span> KM</td>
+                    </tr>
+                    <tr>
+                        <td>Brændstof</td>
+                        <td class="right">Benzin</td>
+                    </tr>
+                </table>
+			</div>
+
+            <div class="boxCars item-11">
+                <table>
+                    <tr>
+                        <th class="headerCars">AUDI MODEL</th>
+                        <th class="right pris" >4.500 pr. md.</th>
+                    </tr>
+                    <tr>
+                        <td>Årstal</td>
+                        <td class="right"><span class="roboto">2013</span></td>
+                    </tr>
+                    <tr>
+                        <td>KM kørt</td>
+                        <td class="right"><span class="roboto">45</span> KM</td>
+                    </tr>
+                    <tr>
+                        <td>Brændstof</td>
+                        <td class="right">Benzin</td>
+                    </tr>
+                </table>
+			</div>
+
+            <div class="boxCars item-12">
+                <table>
+                    <tr>
+                        <th class="headerCars">AUDI MODEL</th>
+                        <th class="right pris" >4.500 pr. md.</th>
+                    </tr>
+                    <tr>
+                        <td>Årstal</td>
+                        <td class="right"><span class="roboto">2013</span></td>
+                    </tr>
+                    <tr>
+                        <td>KM kørt</td>
+                        <td class="right"><span class="roboto">45</span> KM</td>
+                    </tr>
+                    <tr>
+                        <td>Brændstof</td>
+                        <td class="right">Benzin</td>
+                    </tr>
+                </table>
+			</div> 
+    </main>
+
     <footer></footer>
 </body>
 
