--- a/leasing.html
+++ b/leasing.html
@@ -18,11 +18,10 @@
         <header></header>
     </section>
         <main class="privatLeasing leasingGrid">
-            <h1 class="leasingHeader">
-                Privatleasing
-            </h1>
-
-            <div class="div1">
+            <section>
+                <h1 class="leasingHeader">
+                    Privatleasing
+                </h1>
                 <p>
                     Lad os hjælpe dig med at udregne om leasing af din næste bil er
                     en god forretning for dig. Privatleasing kan bruges uanset om bilen
@@ -31,6 +30,7 @@
                     Når du laver en privat leasing aftale med os, har vi ét enkelt krav til
                     dig, du skal finde den bil du gerne vil køre i, resten ordner vi.
                 </p>
+            
                 <h2>
                     Privatleasing af alle bilmærker
                 </h2>
@@ -53,30 +53,30 @@
                     En normal privatleasing aftale bygger på en model, hvor
                     leasingselskabet tager bilen tilbage efter endt leasing. Derved
                     påtager leasingselskabet sig også risikoen. Leasingtageren
-                    forpligter sig til at levere bilen tilbage i god stand – dvs. uden
-                    buler, ridser og andre brugsskader – samt at overholde den
+                    forpligter sig til at levere bilen tilbage i god stand - dvs. uden
+                    buler, ridser og andre brugsskader - samt at overholde den
                     kilometerbegrænsning, der er aftalt i leasingperioden.
                 </p>
-            </div>
+            </section>
 
-            <div class="div2">
-            </div>
-
-            <div class="div3">
-                <h2>
-                    Privatleasing af drømmebilen
-                </h2>
-                <p>
-                    Du har nu mulighed for at lave en privatleasing aftale på den
-                    bil du altid har drømt om. Vi alle går vel rundt med lidt benzin i
-                    blodet, og synes det er en fornøjelse at sætte sig ind i en
-                    lækker bil, med masser af komfort og udstyr.
-                    Vi har mange års erfaring med erhvervs leasing og
-                    privatleasing, og ingen opgaver er for store til os. Vi skaffer
-                    bilen på kort tid, efter du har besluttet dig, og vi levere den til
-                    dig med plader etc.
-                </p>
-            </div>  
+            <section>
+                <img src="assets/images/miso.JPG" alt="">
+                <section>
+                    <h2>
+                        Privatleasing af drømmebilen
+                    </h2>
+                    <p>
+                        Du har nu mulighed for at lave en privatleasing aftale på den
+                        bil du altid har drømt om. Vi alle går vel rundt med lidt benzin i
+                        blodet, og synes det er en fornøjelse at sætte sig ind i en
+                        lækker bil, med masser af komfort og udstyr.
+                        Vi har mange års erfaring med erhvervs leasing og
+                        privatleasing, og ingen opgaver er for store til os. Vi skaffer
+                        bilen på kort tid, efter du har besluttet dig, og vi levere den til
+                        dig med plader etc.
+                    </p>
+                </section> 
+            </section>
     </main>
     
     <footer></footer>
