--- a/biler.html
+++ b/biler.html
@@ -20,7 +20,7 @@
 
     <main>
         <div class="container">
-			<div class="boxCars item-1">
+			<section class="boxCars item-1">
                 <table>
                     <tr>
                         <th class="headerCars">AUDI MODEL</th>
@@ -39,9 +39,9 @@
                         <td class="right">Benzin</td>
                     </tr>
                 </table>
-			</div>
+			</section>
 
-            <div class="boxCars item-2">
+            <section class="boxCars item-2">
                 <table>
                     <tr>
                         <th class="headerCars">AUDI MODEL</th>
@@ -60,9 +60,9 @@
                         <td class="right">Benzin</td>
                     </tr>
                 </table>
-			</div>
+			</section>
 
-            <div class="boxCars item-3">
+            <section class="boxCars item-3">
                 <table>
                     <tr>
                         <th class="headerCars">AUDI MODEL</th>
@@ -81,9 +81,9 @@
                         <td class="right">Benzin</td>
                     </tr>
                 </table>
-			</div>
+			</section>
 
-            <div class="boxCars item-4">
+            <section class="boxCars item-4">
                 <table>
                     <tr>
                         <th class="headerCars">AUDI MODEL</th>
@@ -102,9 +102,9 @@
                         <td class="right">Benzin</td>
                     </tr>
                 </table>
-			</div>
+			</section>
 
-            <div class="boxCars item-5">
+            <section class="boxCars item-5">
                 <table>
                     <tr>
                         <th class="headerCars">AUDI MODEL</th>
@@ -123,9 +123,9 @@
                         <td class="right">Benzin</td>
                     </tr>
                 </table>
-			</div>
+			</section>
 
-            <div class="boxCars item-6">
+            <section class="boxCars item-6">
                 <table>
                     <tr>
                         <th class="headerCars">AUDI MODEL</th>
@@ -144,9 +144,9 @@
                         <td class="right">Benzin</td>
                     </tr>
                 </table>
-			</div>
+			</section>
 
-            <div class="boxCars item-7">
+            <section class="boxCars item-7">
                 <table>
                     <tr>
                         <th class="headerCars">AUDI MODEL</th>
@@ -165,9 +165,9 @@
                         <td class="right">Benzin</td>
                     </tr>
                 </table>
-			</div>
+			</section>
 
-            <div class="boxCars item-8">
+            <section class="boxCars item-8">
                 <table>
                     <tr>
                         <th class="headerCars">AUDI MODEL</th>
@@ -186,9 +186,9 @@
                         <td class="right">Benzin</td>
                     </tr>
                 </table>
-			</div>
+			</section>
 
-            <div class="boxCars item-9">
+            <section class="boxCars item-9">
                 <table>
                     <tr>
                         <th class="headerCars">AUDI MODEL</th>
@@ -207,9 +207,9 @@
                         <td class="right">Benzin</td>
                     </tr>
                 </table>
-			</div>
+			</section>
 
-            <div class="boxCars item-10">
+            <section class="boxCars item-10">
                 <table>
                     <tr>
                         <th class="headerCars">AUDI MODEL</th>
@@ -228,9 +228,9 @@
                         <td class="right">Benzin</td>
                     </tr>
                 </table>
-			</div>
+			</section>
 
-            <div class="boxCars item-11">
+            <section class="boxCars item-11">
                 <table>
                     <tr>
                         <th class="headerCars">AUDI MODEL</th>
@@ -249,9 +249,9 @@
                         <td class="right">Benzin</td>
                     </tr>
                 </table>
-			</div>
+			</section>
 
-            <div class="boxCars item-12">
+            <section class="boxCars item-12">
                 <table>
                     <tr>
                         <th class="headerCars">AUDI MODEL</th>
@@ -270,7 +270,8 @@
                         <td class="right">Benzin</td>
                     </tr>
                 </table>
-			</div> 
+			</section> 
+        </div>
     </main>
 
     <footer></footer>
